--- a/Part 1/Second_tutorial_Machine_Learning.ipynb
+++ b/Part 1/Second_tutorial_Machine_Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "dict_keys(['data', 'target', 'frame', 'categories', 'feature_names', 'target_names', 'DESCR', 'details', 'url'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "array([False])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,6 +128,146 @@
     "\n",
     "# Let's check the classifier by an instance,\n",
     "sgd_clf.predict([some_digit])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.98105, 0.9735 , 0.95335])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Cross-validating the model with K-fold cross-validation technique,\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "cross_val_score(sgd_clf, X_train, y_train_7, cv = 3, scoring = \"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.89535, 0.8984 , 0.893  ])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's try a different model than SGD\n",
+    "# Let's try BaseEstimator\n",
+    "\n",
+    "from sklearn.base import BaseEstimator\n",
+    "\n",
+    "class Never7Classifier(BaseEstimator):\n",
+    "    def fit(self, X, y = None):\n",
+    "        pass\n",
+    "    def predict(self, X):\n",
+    "        return np.zeros((len(X), 1), dtype = bool)\n",
+    "\n",
+    "never_7_clf = Never7Classifier()\n",
+    "cross_val_score(never_7_clf, X_train, y_train_7, cv = 3, scoring = \"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A much efficient way to check the accuracy is to compute the 'confusion matrix'.\n",
+    "# The general idea is to count the number of instance the class A was classified as class B\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "y_train_pred = cross_val_score(sgd_clf, X_train, y_train, cv = 3)\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_train_7, y_train_pred)\n",
+    "\n",
+    "# The output contains a 2x2 array: The first row considers non-7 images (negative class), where the first element is\n",
+    "# the number of correctly classified instances (true negatives) and the second element as wrongly classified (false\n",
+    "# negatives). The second row consists of the first element as wrongly classfied 7s (false positives) and the second\n",
+    "# element consists of correctly classfied 7s (true positives)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# While the confusion matrix would give the information required, a measure called 'precision' of a classifier can be\n",
+    "# derived from the confusion matrix. This accurately describes the positive predictions.\n",
+    "\n",
+    "# A mathematical formula is precision = TP / (TP + FP), where TP - true positive, FP - false positive\n",
+    "\n",
+    "# For further accuracy, another measure called 'recall' or 'sensitivity' or 'true positive rate' (TPR) is used along with\n",
+    "# the precision measure.\n",
+    "\n",
+    "# recall = TP + (TP + FN), where TP - True Positive, FN - False Negative\n",
+    "\n",
+    "# Computing precision and recall,\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "precision_score(y_train_7, y_train_pred)\n",
+    "recall_score(y_train_7, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_train_7' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-e0c60e73fe1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# f1 is computed as,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mf1_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train_7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'y_train_7' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# It is often convenient to combine precision and recall into a single matrix called f1 score. The f1 score is the harmonic\n",
+    "# mean of precision and recall.\n",
+    "# Whilst the regular mean treats all values equally, a harmonic mean gives much more weight to low values.\n",
+    "# As a result, the classifier f1 will only get a hogh score if both precision and recall are high.\n",
+    "\n",
+    "# The mathematical formula for f1 is:\n",
+    "# f1 = 2 / ( 1/precision + 1/recall) == TP/ (TP + ((FN + FP)/2))\n",
+    "\n",
+    "# f1 is computed as,\n",
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(y_train_7, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With the type of the problem, it may be beneficial to increase or reduce precision or\n",
+    "# recall"
    ]
   }
  ],
